Auto IRC Bot 3.0: Change Log
------------------------------------------------------------------

3.0 Indev
==================================================================
    * Bug fix: The bot's nick is now stored correctly.
    * Added server:modes config option for setting modes on
      connect.
    * Parse TOPIC. (and added hook on_topic)
    * Added DB::Flatfile for DB:: database functions.
    * Added umode() to API::IRC.
    * Added events on_ucjoin, on_rcjoin and on_nick.
    * Parse numerics 465, 471-475 and 477.
    * Added an optional @args onto event_run() for sending @args
      to the subs that have hooked onto the event.
    * Parse the channels the bot is in.
    * Parse Numeric:438.
    * Added timer_add() and timer_del() to API::Std for timers.
    * Added events: on_sigterm, on_sigint and on_sighup.
    * Added event_add|del|run() and hook_add|del() to API::Std for
      managing and running events/hooks.
    * server:nspass removed. server:idstr added.
    * Changed the way we parse strings to support multi-word
      strings in config values.
    * Added server:nspass to config options. Will be replaced in
      the future by idstr.
    * Parse NICK.
    * Added usrc() to API::IRC for formatting a source.
    * Added awarn() to API::Std for warnings.
    * Parse Numeric:432.
    * Parse Numeric:433.
    * Added nick() to API::IRC.
    * Added %got_001 to Parser::IRC for checking if we've been
      sent 001.
    * Renamed API::IRC::mode() to cmode()
    * Added mod_init() and mod_void() to API::Std.
    * Use Class::Unload.
    * Handle SIGTERM, SIGINT and SIGHUP.
    * Added quit() to API::IRC.
    * Added notice() to API::IRC.
    * Added privmsg() to API::IRC.
    * Added mode() to API::IRC.
    * Added PASS support.
    * Bug fix: err() fatal errors now work. They didn't work
      due to bad regex.
    * Added an installation script.
    * Fork into the background if not in debug mode.
    * Begin on API::IRC.