@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Parse Numeric:005 and store PREFIX's data.
     * Bug fix: The bot's nick is now stored correctly.
     * Added server:modes config option for setting modes on
       connect.
